Fix: Adjust alignment of icons

--- a/src/pages/ShopPage/ShopPage.module.css
+++ b/src/pages/ShopPage/ShopPage.module.css
@@ -9,7 +9,7 @@
 .aside {
   background-color: var(--gray);
   border-radius: 5px;
-  max-height: calc(100vh - 88px);
+  max-height: calc(100vh - 85px);
   overflow-y: auto;
   padding: 1.5rem 0;
   scrollbar-width: thin;
@@ -22,6 +22,9 @@
   margin-bottom: 10px;
   padding: 0 0.5rem;
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.775);
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .navigation {
@@ -90,4 +93,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.775);
 }
